--- a/src/pug/kontakty.pug
+++ b/src/pug/kontakty.pug
@@ -43,7 +43,7 @@ html(lang=lang)
                                         .col-12.col-sm-12.col-md-6
                                             .m-contactItem_content
                                                 strong.m-contactItem__subtitle Zákaznický servis - informace
-                                                strong.m-contactItem__phone Pionýrů 839 ( areál SELIKO Park )
+                                                strong.m-contactItem__phone +420 558 638 206
                                                 strong.m-contactItem__subtitle (Provozní doba : Po-Čt: 8-16h, Pá: 8-14:30h)
                                                 p.m-contactItem__text skype:  general.army1
                                                 p.m-contactItem__text ICQ:  391684575
@@ -59,6 +59,81 @@ html(lang=lang)
 
                                                 strong.m-contactItem__subtitle Sklad, Velkosklad  
                                                 p.m-contactItem__text email: velkoobchod@army-shop.cz 
+
+
+                            .col-12.col-sm-12.col-md-12
+                                .m-contactItem
+                                    h2.m-contactItem__title KAMENNÉ PRODEJNY:
+                                    .row
+
+                                        .col-12.col-sm-12.col-md-6   
+                                            .m-contactItem_content
+                                                img(src=URLbase+"img/prodejna1.jpg" alt="OSTRAVA - VÍTKOVICE" title="OSTRAVA - VÍTKOVICE")
+                                                strong.m-contactItem__subtitle OSTRAVA - VÍTKOVICE
+                                                p.m-contactItem__text ARMYSHOP - Rudná čp. 1117/30
+                                                p.m-contactItem__text Ostrava – Vítkovice, 703 00 
+                                                p.m-contactItem__text Telefon/FAX : +420 596 632 384
+                                                p.m-contactItem__text Mobil GSM : +420 776 648 648
+                                                p.m-contactItem__text Email: rudna@army-shop.cz
+                                                p.m-contactItem__text Skype: armyshoprudna1
+
+                                        .col-12.col-sm-12.col-md-6   
+                                            .m-contactItem_content
+                                                img(src=URLbase+"img/prodejna2.jpg" alt="FRÝDEK - MÍSTEK" title="FRÝDEK - MÍSTEK")
+                                                strong.m-contactItem__subtitle FRÝDEK - MÍSTEK;
+                                                p.m-contactItem__text ARMYSHOP - náměstí Svobody č.3
+                                                p.m-contactItem__text Frýdek-Místek, 73801 
+                                                p.m-contactItem__text Telefon/FAX : +420 558 433 775 
+                                                p.m-contactItem__text Mobil GSM : +420 737 143 143
+                                                p.m-contactItem__text Email: prodejna-fm@army-shop.cz
+                                                p.m-contactItem__text Skype: armyshop-místek                                   
+
+                            .col-12.col-sm-12.col-md-12
+                                .m-contactItem
+                                    .m-contactItem_content
+                                        p.m-contactItem__text (více info viz odkaz " kamenné prodejny " v hlavním menu, PRODEJNÍ CENY  v kamenném a internetovém obchodě se liší, k okamžitému odběru pouze vybraný sortiment.)
+                                        br
+                                        h2.m-contactItem__title Obchodní údaje - fakturační adresa:
+                                        p.m-contactItem__text Název: GENERAL ARMY spol. s r.o.
+                                        p.m-contactItem__text Adresa: Riegrova 857, 73801 Frýdek-Místek
+                                        p.m-contactItem__text IČ: 47153750
+                                        p.m-contactItem__text DIČ: CZ47153750
+                                        p.m-contactItem__text ID datové schránky: 49i728r
+                                        strong.m-contactItem__subtitle Spol. zapsána  v obchodním rejstříku vedeného Krajským soudem v Ostravě oddíl C, vložka 4007, datum zápisu 14. září 1992 
+                                        br
+                                        strong.m-contactItem__subtitle Výpis ze systému ARES ministerstva financí ČR
+                                        a.m-contactItem__link(href="#") Výpis z rejstříku ekonomických subjektů (ČSÚ) 
+                                        a.m-contactItem__link(href="#") Koncesní listina - prodej zbraní (pdf) 
+                                        a.m-contactItem__link(href="#") Koncesní listina - prodej střeliva (pdf) 
+                                        br
+                                        strong.m-contactItem__subtitle Zodpovědná osoba
+                                        p.m-contactItem__text Michal Dluhoš ( jednatel )
+                                        p.m-contactItem__text michal.dluhos@army-shop.cz
+                                        br
+                                        p.m-contactItem__text Jan Dluhoš ( jednatel, správce sítě )
+                                        p.m-contactItem__text jan.dluhos@army-shop.cz
+
+
+                            .col-12.col-sm-12.col-md-12
+                                .m-contactItem
+                                    .row
+                                        .col-12.col-sm-12.col-md-6  
+                                            .m-contactItem_content 
+                                                strong.m-contactItem__subtitle Bankovní spojení pro Českou republiku      
+                                                p.m-contactItem__text Raiffeisen BANK - Frýdek-Místek, Ostravská 2129
+                                                p.m-contactItem__text Č.ú. 3249454001 / 5500
+                                                p.m-contactItem__text IBAN CZ1355000000003249454001
+                                                p.m-contactItem__text SWIFT RZBCCZPP
+
+                                        .col-12.col-sm-12.col-md-6   
+                                            .m-contactItem_content
+                                                strong.m-contactItem__subtitle Bankovní spojení pro Slovenskou republiku   
+                                                p.m-contactItem__text Slovenská spořitelna - Bratislava, Suché mýto 4
+                                                p.m-contactItem__text Č.ú. 0313279612 / 0900
+                                                p.m-contactItem__text IBAN SK3409000000000313279612
+                                                p.m-contactItem__text SWIFT GIBASKBX
+
+
         include partials/_footer.pug
 
         include partials/_js-include.pug
