--- a/src/pug/produkt-detail.pug
+++ b/src/pug/produkt-detail.pug
@@ -113,6 +113,8 @@ html(lang=lang)
                                         .m-productDetailMain__stockText Skladem 5 kusů (u vás 2-10 dnů)
                                         span.m-productDetailMain__stockLink(data-toggle="modal" data-target="#modal-stock") Více informací
 
+                                .m-productDetailMain__info
+                                    a.m-productDetailMain__id(href="#") TABULKA VELIKOSTÍ
 
                                 .m-productDetailMain__cta
 
