--- a/src/scss/partials/02_molecule/_m-productDetailMain.scss
+++ b/src/scss/partials/02_molecule/_m-productDetailMain.scss
@@ -63,7 +63,7 @@
     margin-top: 1rem;
 }
 .m-productDetailMain__stock{
-    margin: 4rem 0;
+    margin: 4rem 0 0 0;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -141,7 +141,7 @@
     justify-content: space-between;
     align-items: center;
     background: transparent;
-    padding: 2rem 0;
+    padding: 2rem 0 4rem 0;
 }
 
 .m-productDetailMain__id{
