--- a/src/pug/partials/_single-product-cell.pug
+++ b/src/pug/partials/_single-product-cell.pug
@@ -14,7 +14,8 @@
                         .a-tag.-recommended Doporučené
                     .m-productCell__tagSingle 
                         .a-tag.-top Top
-
+                .a-tag.-circle -50%
+                
                 .m-productCell__imgWrap
                     img.lazy.m-productCell__img(src=URLbase+"img/placeholder-280x280.png" data-src=URLbase+"img/product-thumb-medium.jpg" alt="#")
                     span.lazy.m-productCell__preloader
