--- a/src/pug/produkt-detail.pug
+++ b/src/pug/produkt-detail.pug
@@ -25,6 +25,7 @@ html(lang=lang)
                                         .a-tag.-recommended Doporučené
                                     .m-productDetailCarousel__tagSingle 
                                         .a-tag.-top Top
+                                .a-tag.-circle -50%
 
 
 
