--- a/src/pug/ucet-registrace.pug
+++ b/src/pug/ucet-registrace.pug
@@ -23,6 +23,21 @@ html(lang=lang)
                     .o-form__divider.m-formDivider Osobní údaje
 
                     .row
+
+                        .col-12.col-md-6
+                            .o-form__group.m-formGroup
+                                input.m-formGroup__input(type="email" name="register_form_email" id="register_form_email" autocomplete="email" required placeholder=" ")
+                                label.m-formGroup__label(for="register_form_email") Emailová adresa
+                                span.m-formGroup__error Neplatný email
+                                span.m-formGroup__success
+
+                        .col-12.col-md-6
+                            .o-form__group.m-formGroup
+                                input.m-formGroup__input(type="text" name="register_form_username" id="register_form_username" autocomplete="username" required placeholder=" ")
+                                label.m-formGroup__label(for="register_form_username") Uživatelské jméno
+                                span.m-formGroup__error Neplatné uživatelské jméno
+                                span.m-formGroup__success
+                                
                         .col-12.col-md-6
                             .o-form__group.m-formGroup
                                 input.m-formGroup__input(type="text" name="register_form_name" id="register_form_name" autocomplete="given-name" required placeholder=" ")
@@ -39,19 +54,12 @@ html(lang=lang)
 
                         .col-12.col-md-6
                             .o-form__group.m-formGroup
-                                input.m-formGroup__input(type="email" name="register_form_email" id="register_form_email" autocomplete="email" required placeholder=" ")
-                                label.m-formGroup__label(for="register_form_email") Emailová adresa
-                                span.m-formGroup__error Neplatný email
-                                span.m-formGroup__success
-                                
-                        .col-12.col-md-6
-                            .o-form__group.m-formGroup
                                 input.m-formGroup__input(type="tel" name="register_form_tel" id="register_form_tel" autocomplete="tel" required placeholder=" ")
                                 label.m-formGroup__label(for="register_form_tel") Telefonní číslo
                                 span.m-formGroup__error Neplatné číslo
                                 span.m-formGroup__success
 
-                        .col-12.col-md-12
+                        .col-12.col-md-6
                             .o-form__group.m-formGroup
                                 input.m-formGroup__input(type="password" name="register_form_password" id="register_form_password" autocomplete="password" required placeholder=" ")
                                 label.m-formGroup__label(for="register_form_password") Heslo
@@ -89,17 +97,11 @@ html(lang=lang)
                                 span.m-formGroup__error Neplatné PSČ
                                 span.m-formGroup__success
 
-                        .col-12.col-md-6
-                            .o-form__group.m-formGroup.-radiobutton
-                                input.m-formGroup__input(type="radio" name="register_form_country" id="register_form_country_cz" required checked)
-                                span.m-formGroup__radiobutton.a-radiobutton
-                                label.m-formGroup__label(for="register_form_country_cz") Česká republika
-
-                        .col-12.col-md-6
-                            .o-form__group.m-formGroup.-radiobutton
-                                input.m-formGroup__input(type="radio" name="register_form_country" id="register_form_country_sk" required)
-                                span.m-formGroup__radiobutton.a-radiobutton
-                                label.m-formGroup__label(for="register_form_country_sk") Slovensko
+                        .col-12.col-md-12
+                            .o-form__group.m-formGroup
+                                select.m-formGroup__input(name="register_form_country" id="register_form_country" required checked)
+                                    option(value="cz") Česká republika
+                                    option(value="sk") Slovensko
 
                     .row
                         .col-12.col-md-6
