--- a/src/scss/partials/02_molecule/_m-cartOverview.scss
+++ b/src/scss/partials/02_molecule/_m-cartOverview.scss
@@ -160,3 +160,9 @@
     padding: 10px 40px;
     margin-left: 10px;
 }
+
+@media screen and (max-width:600px){
+    .m-cartPriceMisc__code{
+        flex-direction: column;
+    }
+}
