--- a/src/pug/kosik-3.pug
+++ b/src/pug/kosik-3.pug
@@ -300,6 +300,13 @@ html(lang=lang)
                                         span.m-formGroup__error Neplatné heslo
                                         span.m-formGroup__success
 
+                                    .o-form__group.m-formGroup.-checkbox
+                                        input.m-formGroup__input(type="checkbox" name="register_form_legal" id="register_form_legal")
+                                        span.m-formGroup__checkbox.a-checkbox
+                                        label.m-formGroup__label.-small(for="register_form_legal") Souhlasím se #[a(href="#") zpracováním osobních údajů] za účelem registrace.          
+
+                            
+
 
                                 .o-form__legal Vložením údajů beru na vědomí #[a(href="#") zpracování osobních údajů]
 
