--- a/src/pug/ucet-detail.pug
+++ b/src/pug/ucet-detail.pug
@@ -162,16 +162,12 @@ html(lang=lang)
                                     label.m-formGroup__label(for="register_form_billing_postal_code") PSČ
                                     span.m-formGroup__error Neplatné PSČ
                                     span.m-formGroup__success
-        
-                                .o-form__group.m-formGroup.-radiobutton
-                                    input.m-formGroup__input(type="radio" name="register_form_billing_postal_country" id="register_form_billing_postal_country_cz" checked)
-                                    span.m-formGroup__radiobutton.a-radiobutton
-                                    label.m-formGroup__label(for="register_form_billing_postal_country_cz") Česká republika
 
-                                .o-form__group.m-formGroup.-radiobutton
-                                    input.m-formGroup__input(type="radio" name="register_form_billing_postal_country" id="register_form_billing_postal_country_sk" )
-                                    span.m-formGroup__radiobutton.a-radiobutton
-                                    label.m-formGroup__label(for="register_form_billing_postal_country_sk") Slovensko
+                                .col-12.col-md-12
+                                    .o-form__group.m-formGroup
+                                        select.m-formGroup__input(name="register_form_billing_postal_country" id="register_form_billing_postal_country" required checked)
+                                            option(value="cz") Česká republika
+                                            option(value="sk") Slovensko
 
 
                         .col-12.col-md-6
@@ -220,15 +216,34 @@ html(lang=lang)
                                     span.m-formGroup__error Neplatné PSČ
                                     span.m-formGroup__success
 
-                                .o-form__group.m-formGroup.-radiobutton
-                                    input.m-formGroup__input(type="radio" name="register_form_shipping_postal_country" id="register_form_shipping_postal_country_cz" checked)
-                                    span.m-formGroup__radiobutton.a-radiobutton
-                                    label.m-formGroup__label(for="register_form_shipping_postal_country_cz") Česká republika
+                                .col-12.col-md-12
+                                    .o-form__group.m-formGroup
+                                        select.m-formGroup__input(name="register_form_shipping_postal_country" id="register_form_shipping_postal_country" required checked)
+                                            option(value="cz") Česká republika
+                                            option(value="sk") Slovensko
 
-                                .o-form__group.m-formGroup.-radiobutton
-                                    input.m-formGroup__input(type="radio" name="register_form_shipping_postal_country" id="register_form_shipping_postal_country_sk" )
-                                    span.m-formGroup__radiobutton.a-radiobutton
-                                    label.m-formGroup__label(for="register_form_shipping_postal_country_sk") Slovensko
+                    .o-form__divider.m-formDivider Velkoobchod
+                    .row
+                        .col-12.col-md-6
+                            .o-form__group.m-formGroup
+                                input.m-formGroup__input(type="text" name="register_form_market_name" id="register_form_market_name" autocomplete="company" placeholder=" ")
+                                label.m-formGroup__label(for="register_form_market_name") Název firmy
+                                span.m-formGroup__error Neplatný název firmy
+                                span.m-formGroup__success
+
+                        .col-12.col-md-6
+                            .o-form__group.m-formGroup
+                                input.m-formGroup__input(type="text" name="register_form_market_ico" id="register_form_market_ico" autocomplete="ico" placeholder=" ")
+                                label.m-formGroup__label(for="register_form_market_ico") IČO
+                                span.m-formGroup__error Neplatné IČO
+                                span.m-formGroup__success
+
+                        .col-12.col-md-6
+                            .o-form__group.m-formGroup
+                                input.m-formGroup__input(type="text" name="register_form_market_dic" id="register_form_market_dic" autocomplete="dic" placeholder=" ")
+                                label.m-formGroup__label(for="register_form_market_dic") DIČ
+                                span.m-formGroup__error Neplatné DIČ
+                                span.m-formGroup__success                           
 
 
                     .o-form__divider.m-formDivider Ostatní
