--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -203,7 +203,7 @@ html(lang=lang)
 
         section.o-store
             .container
-                h1 Vybrané kategorie
+                h1 Kamenné prodejny
                 .row
                     .col-12.col-md-6
                         .o-store__single
