--- a/src/scss/partials/02_molecule/_m-tabsNav.scss
+++ b/src/scss/partials/02_molecule/_m-tabsNav.scss
@@ -39,7 +39,7 @@
 }
 .m-tabsContent__btnWrap{
     text-align: center;
-    margin-bottom: 2rem;
+    padding-bottom: 2rem;
     margin-top: 3rem;
 }
 .m-tabsContent__collapseToggle{
