--- a/src/pug/partials/_footer.pug
+++ b/src/pug/partials/_footer.pug
@@ -16,6 +16,10 @@ footer
                                 span.m-emailSubscribe__checkbox
                                 span.m-emailSubscribe__inlineText Odesláním formuláře souhlasím se #[a(href="#") zpracovaním osobních údajů]
 
+                .col-12.col-md-6.o-footerContacts__col
+                    .m-footerSocial
+                        a.m-footerSocial__link(href="#")
+                            span.a-icon.-facebook.-white 
             
             
     section.o-footerMain
