--- a/src/scss/partials/03_organism/_o-footer.scss
+++ b/src/scss/partials/03_organism/_o-footer.scss
@@ -115,6 +115,19 @@ footer{
     }
 }
 
+
+.m-footerSocial{
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.m-footerSocial__link span{
+    height: 42px;
+    width: 42px;
+}
+
 /* ========================================================================== */
 /* FOOTER MAIN */
 /* ========================================================================== */
